--- a/src/components/experience.module.css
+++ b/src/components/experience.module.css
@@ -1,11 +1,63 @@
 .experienceBox {
 position: absolute;
-width: 25rem;
-height: 25rem;
+width: 21.75rem;
+height: 25.5rem;
 left: 3rem;
-top: 70rem;
+top: 61.125rem;
 background: #302F3D;
 box-shadow: 0.14rem 0.14rem 0.14rem 0.14rem rgba(0, 0, 0, 0.2);
 border-radius: 1rem;
 flex-direction: column;
+margin-top: 1.875rem;
+}
+
+.experienceBox h1 {
+
+    font-family: 'Merriweather Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
+    color: #837E9F;
+
+}
+
+.experienceBox span {
+    font-family: 'Merriweather Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+
+    color: #837E9F;
+}
+
+.experienceHead {
+    position: absolute;
+    width: 8.8125rem;
+    height: 1.625rem;
+    left: 1.25rem;
+    top: 1.875rem;
+
+    font-family: 'Merriweather Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 25px;
+    /* identical to box height */
+
+
+color: #837E9F;
+}
+
+.container1 {
+    width: 16.75rem ;
+    height: 15.1875rem;
+    top: 7.75rem;
+    left: 2.5rem;
+
+}
+
+.container1 div {
+    margin: 1rem;
 }
